--- a/app/index.html
+++ b/app/index.html
@@ -1,29 +1,18 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="snapnote">
 <head>
-  <meta charset="utf-8">
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css"/>
+    <meta charset="utf-8">
+    <title>SnapNote</title>
+    <link rel="stylesheet" type="text/css" href="css/bootswatch.yeti.min.css">
 </head>
-<body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+<body class="app">
 
-  <div ng-view></div>
+    <ng-view></ng-view>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-route.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular/angular-route.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/choose-image.js"></script>
+    <script src="js/deck-list.js"></script>
 </body>
 </html>
