more draggable/droppable work… first directives

--- a/app/index.html
+++ b/app/index.html
@@ -63,5 +63,6 @@
     <script src="js/login.js"></script>
     <script src="js/create-note.js"></script>
     <script src="js/deck-list.js"></script>
+    <script src="js/directives.js"></script>
 </body>
 </html>
